--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,185 @@
-#wrapper {
-    max-width: 1170px;
-    margin-right: auto;
-    margin-left:  auto;
+body {
+    box-sizing: border-box;
+
+    text-transform: uppercase;
+
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
 }
+
+#wrapper {
+    margin: 0 auto;
+
+    max-width: 1170px;
+}
+
+/*HEADER(hello) section*/
+
+.hello {
+    height: 100vh;
+    background-color: #3498db;
+
+    color: #ecf0f1;
+}
+
+.hello-header > img {
+    float: left;
+    margin-top: 55px;
+
+    width: 147px;
+    height: 34px;
+}
+
+.hello-header-nav > img {
+    float: right;
+    margin-top: 55px;
+
+    width: 38px;
+    height: 27px;
+}
+
+.clearfix:after{
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.hello-header {
+    margin-bottom: 200px;
+}
+
+.hello-main span {
+    display: block;
+    text-align: center;
+    
+    text-shadow: 0.5px 0.866px 0px rgba(155, 155, 155, 0.3);
+
+    line-height: 92px;
+    font-size: 86px;
+}
+
+.hello-main h2 {
+    display: block;
+    text-align: center;
+    margin-top: 10px;
+
+    text-shadow: 0.5px 0.866px 0px rgba(155, 155, 155, 0.3);
+
+    line-height: 92px;
+    font-size: 60px;
+}
+
+
+/*ABOUT-US section*/
+.about-us {
+    position: relative;
+    
+    background-color: #ecf0f1;
+}
+
+/*about-us-top*/
+.about-us-top {
+    margin-left: 15px;
+    text-align: center;
+    padding-bottom: 80px;
+
+    width: 1140px;
+    border-radius: 10px;
+    box-shadow: 0.5px 0.866px 0px 1px rgba(155, 155, 155, 0.3);
+    background-color: #fff;
+}
+
+.about-us-top span {
+    display: block;
+    text-align: center;
+    padding-top: 60px;
+
+    line-height: 92px;
+    font-size: 40px;
+    font-weight: 300;
+}
+
+.about-us-top img {
+    display: block;
+    
+    margin: 0 auto;
+    margin-top: 5px;
+    margin-bottom: 20px;
+}
+
+.about-us-top p {
+    width: 775px;
+    height: 165px;
+    margin-left: 185px;
+    margin-bottom: 60px;
+
+    overflow-y: hidden;
+
+    line-height: 35px;
+    font-size: 20px;
+    font-weight: 300;
+}
+
+.about-us-top .btn {
+    display: block;
+    margin: 0 auto;
+
+    border-radius: 50px;
+    width: 277px;
+    height: 76px;
+
+    background-color: #3498db;
+    color: #ffffff;
+    box-shadow: 0.5px 0.866px 0px 1px rgba(155, 155, 155, 0.3);
+    text-decoration: none;
+
+    
+    line-height: 72px;
+    font-size: 20px;
+    
+}
+
+/*about-us-bottom*/
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.about-us-bottom-slider {
+    margin-top: 90px;
+    padding-bottom: 120px;  
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.about-us-bottom-slider .about-us-bottom-slider-item {
+    
+
+    width: 283px;
+    height: 316px;
+}
+
+.about-us-bottom-slider .about-us-bottom-slider-item .image {
+    width: 222px;
+    height: 222px;
+    border-radius: 50%;
+    margin: 0 auto;
+
+    box-shadow: 0.5px 0.866px 0px 1px rgba(155, 155, 155, 0.3);
+    background-color: #ffffff;
+}
+
+.about-us-bottom-slider .about-us-bottom-slider-item span {
+    margin-top: 40px;
+    display: block;
+    text-align: center;
+
+
+    color: #2c3e50;
+
+    font-size: 20px;
+    line-height: 35px;
+}
+
