--- a/css/style.css
+++ b/css/style.css
@@ -22,36 +22,30 @@ body {
     color: #ecf0f1;
 }
 
-.hello-header > img {
-    float: left;
-    margin-top: 55px;
+.hello-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 200px;
+    padding-top: 55px;
 
+}
+
+.hello-header-logo {
     width: 147px;
     height: 34px;
 }
 
-.hello-header-nav > img {
-    float: right;
-    margin-top: 55px;
-
+.hello-header-nav {
     width: 38px;
     height: 27px;
 }
 
-.clearfix:after{
-    content: "";
-    display: table;
-    clear: both;
-}
-
-.hello-header {
-    margin-bottom: 200px;
+.hello-main {
+    text-align: center;
 }
 
 .hello-main span {
-    display: block;
-    text-align: center;
-    
     text-shadow: 0.5px 0.866px 0px rgba(155, 155, 155, 0.3);
 
     line-height: 92px;
@@ -59,8 +53,6 @@ body {
 }
 
 .hello-main h2 {
-    display: block;
-    text-align: center;
     margin-top: 10px;
 
     text-shadow: 0.5px 0.866px 0px rgba(155, 155, 155, 0.3);
@@ -71,15 +63,14 @@ body {
 
 
 /*ABOUT-US section*/
-.about-us {
-    position: relative;
-    
+.about-us {   
     background-color: #ecf0f1;
 }
 
 /*about-us-top*/
 .about-us-top {
-    margin-left: 15px;
+    position: relative;
+    margin: 0 auto;
     text-align: center;
     padding-bottom: 80px;
 
@@ -89,9 +80,7 @@ body {
     background-color: #fff;
 }
 
-.about-us-top span {
-    display: block;
-    text-align: center;
+.about-us-top-about {
     padding-top: 60px;
 
     line-height: 92px;
@@ -99,34 +88,45 @@ body {
     font-weight: 300;
 }
 
-.about-us-top img {
-    display: block;
-    
-    margin: 0 auto;
-    margin-top: 5px;
-    margin-bottom: 20px;
+
+.about-us-top-close {
+    position: absolute;
+    left: 550px;
+    top: 95px;
+
+
+    width: 32px;
+    height: 32px;
 }
 
-.about-us-top p {
-    width: 775px;
-    height: 165px;
-    margin-left: 185px;
-    margin-bottom: 60px;
+.about-us-top-close:before, .about-us-top-close:after {
+    position: absolute;
+    left: 15px;
+    content: ' ';
+    height: 33px;
+    width: 8px;
+    background-color: #3498db;
+}
 
-    overflow-y: hidden;
+.about-us-top-close:before {
+    transform: rotate(45deg);
+}
+    
+.about-us-top-close:after {
+    transform: rotate(-45deg);
+}
+
+.about-us-top-p {
+    padding: 45px 185px 35px 185px;
 
     line-height: 35px;
     font-size: 20px;
     font-weight: 300;
 }
 
-.about-us-top .btn {
-    display: block;
-    margin: 0 auto;
-
+.btn {
+    padding: 30px 80px 30px 80px;
     border-radius: 50px;
-    width: 277px;
-    height: 76px;
 
     background-color: #3498db;
     color: #ffffff;
@@ -140,6 +140,7 @@ body {
 }
 
 /*about-us-bottom*/
+
 ul {
     list-style: none;
     margin: 0;
@@ -147,18 +148,18 @@ ul {
 }
 
 .about-us-bottom-slider {
-    margin-top: 90px;
+    margin-top: 50px;
     padding-bottom: 120px;  
     display: flex;
     flex-direction: row;
     justify-content: space-around;
 }
 
-.about-us-bottom-slider .about-us-bottom-slider-item {
+.about-us-bottom-slider-item {
     width: 283px;
 }
 
-.about-us-bottom-slider .about-us-bottom-slider-item .image {
+.about-us-bottom-slider-item .image {
     width: 222px;
     height: 222px;
     border-radius: 50%;
@@ -168,7 +169,7 @@ ul {
     background-color: #ffffff;
 }
 
-.about-us-bottom-slider .about-us-bottom-slider-item span {
+.about-us-bottom-slider-item span {
     margin-top: 40px;
     display: block;
     text-align: center;
@@ -182,13 +183,17 @@ ul {
 
 /*Recent-projects*/
 .recent-projects {
+    position: relative;
+    text-align: center;
+
     background: #27ae60;
+
+    overflow: hidden;
+    padding-bottom: 800px;
 }
 
 .recent-projects h3 {
-    margin: 0 auto;
     padding-top: 50px;
-    text-align: center;
 
     color:  #ffffff;
 
@@ -198,9 +203,7 @@ ul {
 }
 
 .recent-projects p {
-    width: 900px;
-    margin: 0 auto;
-    text-align: center;
+    padding: 0px 200px 0px 200px;
 
     color:  #ffffff;
 
@@ -210,15 +213,16 @@ ul {
 }
 
 .recent-projects img {
+    position: absolute;
     display: block;
-    width: 100%;
-    margin: 0 auto;
+    left: 90px;
     padding: 75px 0 120px 0;
 }
 
 
 /*Additional info*/
 .additional-info {
+    text-align: center;
     background: #ecf0f1;
 
 }
@@ -229,80 +233,51 @@ ul {
     justify-content: space-between;
 }
 
+.additional-info-article {
+    position: relative;
+
+    padding-bottom: 80px;
+
+    margin: 0px 15px 0px 15px;
+
+    width: 555px;
+    border-radius: 10px;
+    box-shadow: 0.5px 0.866px 0px 1px rgba(155, 155, 155, 0.3);
+    background-color: #fff;
+}
+
 .additional-info h3 {
-    margin: 0 auto;
-    padding-top: 50px;
-    text-align: center;
+    padding: 60px 0px 60px 0px;
 
     color:  #2c3e50;
 
     font-size: 40px;
     line-height: 60px;
     font-weight: 500;
+    margin: 0px;
 }
 
-.additional-info-article {
-    margin-top: 100px;
-    margin-left: 15px;
-    margin-right: 15px;
-    text-align: center;
-    padding-bottom: 80px;
-
-    width: 554px;
-    border-radius: 10px;
-    box-shadow: 0.5px 0.866px 0px 1px rgba(155, 155, 155, 0.3);
-    background-color: #fff;
-}
-
-.additional-info-article span {
+.additional-info-article-span {
     display: block;
-    text-align: center;
-    padding-top: 60px;
+    padding-top: 40px;
 
     line-height: 92px;
     font-size: 40px;
     font-weight: 300;
 }
 
-.additional-info-article img {
-    display: block;
-    
-    margin: 0 auto;
-    margin-top: 5px;
-    margin-bottom: 20px;
-}
-
 .additional-info-article p {
-    width: 448px;
-    height: 165px;
-    margin: 0 auto;
-
-    overflow-y: hidden;
+    padding: 50px 55px 60px 55px;
 
     line-height: 35px;
     font-size: 20px;
     font-weight: 300;
 }
 
-.additional-info-article .btn {
-    display: block;
-    margin: 0 auto;
-
-    border-radius: 50px;
-    width: 277px;
-    height: 76px;
-
-    background-color: #3498db;
-    color: #ffffff;
-    box-shadow: 0.5px 0.866px 0px 1px rgba(155, 155, 155, 0.3);
-    text-decoration: none;
-
-    
-    line-height: 72px;
-    font-size: 20px;
-    
+.additional-info-article .about-us-top-close {
+    left: 260px;
+    top: 140px;
 }
-
 
 /*Our clients*/
 .our-clients {
@@ -370,12 +345,13 @@ ul {
 }
 
 
-.our-team > p {
-    width: 800px;
-    margin: 0 auto;
+.our-team-p {
     text-align: center;
 
     color:  #2c3e50;
+
+    padding: 0px 200px 0px 200px;
+
 
     font-size: 20px;
     line-height: 35px;
@@ -390,12 +366,12 @@ ul {
     justify-content: space-around;
 }
 
-.our-team-slider .our-team-slider-item {
+.our-team-slider-item {
     width: 312px;
     
 }
 
-.our-team-slider .our-team-slider-item .image {
+.our-team-slider-item .image {
     width: 222px;
     height: 222px;
     border-radius: 50%;
@@ -405,7 +381,7 @@ ul {
     background-color: #ffffff;
 }
 
-.our-team-slider .our-team-slider-item span {
+.our-team-slider-item span {
     margin-top: 40px;
     display: block;
     text-align: center;
@@ -447,10 +423,7 @@ ul {
     background-color: #2c3e50;
 
     color: #b9c1c6;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+
 }
 
 .footer > img {
@@ -461,14 +434,16 @@ ul {
     height: 34px;
 }
 
-.footer-nav-menu {
-    padding-top: 50px;
+.footer-menu {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
-.footer-nav-menu-item {
-    display: inline-block;
+.footer-menu-item {
+
     padding-left: 20px;
 }
-.footer-nav-menu-item a {
+.footer-menu-item a {
     text-decoration: none;
 
     color: #ffffff;
@@ -479,3 +454,9 @@ ul {
 }
 
 
+.flex {
+    padding-top: 50px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
