--- a/css/style.css
+++ b/css/style.css
@@ -34,11 +34,15 @@ body {
 .hello-header-logo {
     width: 147px;
     height: 34px;
+    overflow: hidden;
 }
 
 .hello-header-nav {
+    background: url("../img/burger.png");
     width: 38px;
     height: 27px;
+    text-indent: -9999px;
+    border: 0;
 }
 
 .hello-main {
@@ -213,6 +217,8 @@ ul {
 }
 
 .recent-projects img {
+    width: 90%;
+    max-width: 1506px;
     position: absolute;
     display: block;
     left: 90px;
